--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=loggr
 spring.data.mongodb.uri=mongodb://localhost:27017/loggingdb
 spring.data.mongodb.database=loggr
+spring.data.mongodb.socket-timeout=1000
+spring.data.mongodb.connect-timeout=1000
+
+spring.kafka.listener.missing-topics-fatal=true
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=log-ingestion-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.properties.metadata.max.age.ms=1000
 
 
 loggr.bufferSize=10
