--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.address=0.0.0.0
+
 spring.application.name=loggr
 spring.data.mongodb.uri=mongodb://localhost:27017/loggingdb
 spring.data.mongodb.database=loggr
@@ -13,6 +15,8 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.properties.metadata.max.age.ms=1000
 
-
 loggr.bufferSize=10
 loggr.flushDelay=5000
+
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoints.web.base-path=/actuator
